Bug 193224 - kontact crashed when changing form akonadir resource to imap resource in kaddressbook
Summary: kontact crashed when changing form akonadir resource to imap resource in kadd...
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kabc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-19 12:22 UTC by Christian Trippe
Modified: 2009-06-23 20:30 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Trippe 2009-05-19 12:22:46 UTC
Application that crashed: kontact
Version of the application: 4.3.0 pre
KDE Version: 4.2.86 (KDE 4.2.86 (KDE 4.3 >= 20090514)) "release 125"
Qt Version: 4.5.1
Operating System: Linux 2.6.27.21-0.1-default i686
Distribution: "openSUSE 11.1 (i586)"

What I was doing when the application crashed:
I tried to use the akonadi resource for my adressbook (via imap). But then the akonadiserver took all my cpu. So I wanted to change back to the imap resource and deactivate the akonadi one. -> Crash of kontact

 -- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[KCrash Handler]
#6  SubResourceBase::setActive (this=0x8a841c8, active=false) at /usr/include/QtCore/qatomic_i386.h:120
#7  0xaeddbefb in KABC::ResourceAkonadi::setSubresourceActive (this=0x94346b0, subResource=@0xbfbc7c68, active=105) at /usr/src/debug/kdepim-4.2.85/kresources/akonadi/kabc/resourceakonadi.cpp:232
#8  0xaf2a2721 in ResourceSelection::currentChanged (this=0x950da00, item=0x8a81fc8) at /usr/src/debug/kdepim-4.2.85/kaddressbook/features/resourceselection.cpp:255
#9  0xaf2a4064 in ResourceSelection::qt_metacall (this=0x950da00, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfbc7d68)
    at /usr/src/debug/kdepim-4.2.85/build/kaddressbook/features/resourceselection.moc:84
#10 0xb65ffdc8 in QMetaObject::activate (sender=0x9510380, from_signal_index=96, to_signal_index=96, argv=0xbfbc7d68) at kernel/qobject.cpp:3120
#11 0xb6601552 in QMetaObject::activate (sender=0x9510380, m=0xb631dbf0, local_signal_index=1, argv=0xbfbc7d68) at kernel/qobject.cpp:3194
#12 0xb60696e9 in QTreeWidget::itemClicked (this=0x9510380, _t1=0x8a81fc8, _t2=0) at .moc/release-shared/moc_qtreewidget.cpp:201
#13 0xb606da45 in QTreeWidgetPrivate::_q_emitItemClicked (this=0x9510480, index=@0x98d1f90) at itemviews/qtreewidget.cpp:2228
#14 0xb6076dd1 in QTreeWidget::qt_metacall (this=0x9510380, _c=QMetaObject::InvokeMetaMethod, _id=16, _a=0xbfbc7e9c) at .moc/release-shared/moc_qtreewidget.cpp:144
#15 0xb65ffdc8 in QMetaObject::activate (sender=0x9510380, from_signal_index=32, to_signal_index=32, argv=0xbfbc7e9c) at kernel/qobject.cpp:3120
#16 0xb6601552 in QMetaObject::activate (sender=0x9510380, m=0xb631cb44, local_signal_index=1, argv=0xbfbc7e9c) at kernel/qobject.cpp:3194
#17 0xb5feb4a3 in QAbstractItemView::clicked (this=0x9510380, _t1=@0x98d1f90) at .moc/release-shared/moc_qabstractitemview.cpp:321
#18 0xb5ff8d95 in QAbstractItemView::mouseReleaseEvent (this=0x9510380, event=0xbfbc87b8) at itemviews/qabstractitemview.cpp:1655
#19 0xb603b4fc in QTreeView::mouseReleaseEvent (this=0x9510380, event=0xbfbc87b8) at itemviews/qtreeview.cpp:1794
#20 0xb5aeb323 in QWidget::event (this=0x9510380, event=0xbfbc87b8) at kernel/qwidget.cpp:7521
#21 0xb5ea9a63 in QFrame::event (this=0x9510380, e=0xbfbc87b8) at widgets/qframe.cpp:559
#22 0xb5f49c3f in QAbstractScrollArea::viewportEvent (this=0x9510380, e=0x0) at widgets/qabstractscrollarea.cpp:962
#23 0xb5ffba27 in QAbstractItemView::viewportEvent (this=0x9510380, event=0xbfbc87b8) at itemviews/qabstractitemview.cpp:1471
#24 0xb6035cc6 in QTreeView::viewportEvent (this=0x9510380, event=0xbfbc87b8) at itemviews/qtreeview.cpp:1264
#25 0xb5f4c245 in QAbstractScrollAreaFilter::eventFilter (this=0x94fd2e0, o=0x86fed40, e=0xbfbc87b8) at widgets/qabstractscrollarea_p.h:100
#26 0xb65e8cea in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x807be48, receiver=0x86fed40, event=0xbfbc87b8) at kernel/qcoreapplication.cpp:726
#27 0xb5a9467a in QApplicationPrivate::notify_helper (this=0x807be48, receiver=0x86fed40, e=0xbfbc87b8) at kernel/qapplication.cpp:4053
#28 0xb5a9d311 in QApplication::notify (this=0xbfbca138, receiver=0x86fed40, e=0xbfbc87b8) at kernel/qapplication.cpp:3759
#29 0xb6bc6b8d in KApplication::notify (this=0xbfbca138, receiver=0x86fed40, event=0xbfbc87b8) at /usr/src/debug/kdelibs-4.2.85/kdeui/kernel/kapplication.cpp:307
#30 0xb65e9adb in QCoreApplication::notifyInternal (this=0xbfbca138, receiver=0x86fed40, event=0xbfbc87b8) at kernel/qcoreapplication.cpp:610
#31 0xb5a9c37e in QApplicationPrivate::sendMouseEvent (receiver=0x86fed40, event=0xbfbc87b8, alienWidget=0x86fed40, nativeWidget=0x8086568, buttonDown=0xb6329a40, lastMouseReceiver=@0xb6329a44)
    at ../../src/corelib/kernel/qcoreapplication.h:216
#32 0xb5b0c506 in QETWidget::translateMouseEvent (this=0x8086568, event=0xbfbc9e4c) at kernel/qapplication_x11.cpp:4446
#33 0xb5b0b8dd in QApplication::x11ProcessEvent (this=0xbfbca138, event=0xbfbc9e4c) at kernel/qapplication_x11.cpp:3442
#34 0xb5b3527a in x11EventSourceDispatch (s=0x8074200, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#35 0xb4d5b9c8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#36 0xb4d5f083 in ?? () from /usr/lib/libglib-2.0.so.0
#37 0xb4d5f241 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#38 0xb6615558 in QEventDispatcherGlib::processEvents (this=0x807be38, flags={i = -1078157304}) at kernel/qeventdispatcher_glib.cpp:324
#39 0xb5b34975 in QGuiEventDispatcherGlib::processEvents (this=0x807be38, flags={i = -1078157256}) at kernel/qguieventdispatcher_glib.cpp:202
#40 0xb65e80fa in QEventLoop::processEvents (this=0xbfbca0b0, flags={i = -1078157192}) at kernel/qeventloop.cpp:149
#41 0xb65e853a in QEventLoop::exec (this=0xbfbca0b0, flags={i = -1078157128}) at kernel/qeventloop.cpp:200
#42 0xb65ea9e9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#43 0xb5a94517 in QApplication::exec () at kernel/qapplication.cpp:3526
#44 0x0804c04f in main (argc=1, argv=0xbfbca434) at /usr/src/debug/kdepim-4.2.85/kontact/src/main.cpp:218
Comment 1 Alin M Elena 2009-05-19 21:58:32 UTC
same on the 64 bit version. opensuse 11.1
Comment 2 Christophe Marin 2009-05-20 01:00:10 UTC
Do you have *just* your imap resource ?

I can easily reproduce the cpu load with the Birthday resource but I can't reproduce the crash yet. (I got something different)
Comment 3 Christian Trippe 2009-05-20 08:19:34 UTC
(In reply to comment #2)
> Do you have *just* your imap resource ?
> 
> I can easily reproduce the cpu load with the Birthday resource but I can't
> reproduce the crash yet. (I got something different)

I have only the imap resource for my addressbook. I did not try to reproduce it, but I can if you wish.
Comment 4 Christian Trippe 2009-05-20 09:29:21 UTC
JFYI: The bug with the cpu load was reported as https://bugs.kde.org/show_bug.cgi?id=193249
Comment 5 auxsvr 2009-05-28 21:25:54 UTC
I got the same crash (opensuse 11.1, qt 4.5.1, KDE 4.3beta1) when I tried to remove the compatibility resources in KAddressbook:

Application: Kontact (kontact), signal: Segmentation fault
[KCrash Handler]
#6  SubResourceBase::setActive (this=0x8e98c08, active=false) at /usr/include/QtCore/qatomic_i386.h:120
#7  0xaee65efb in KABC::ResourceAkonadi::setSubresourceActive (this=0x8dfc828, subResource=@0xbfa851f8, active=9) at /usr/src/debug/kdepim-4.2.85/kresources/akonadi/kabc/resourceakonadi.cpp:232
#8  0xade5c721 in ResourceSelection::currentChanged (this=0x8de4218, item=0x8db9968) at /usr/src/debug/kdepim-4.2.85/kaddressbook/features/resourceselection.cpp:255
#9  0xade5e064 in ResourceSelection::qt_metacall (this=0x8de4218, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfa852f8)
    at /usr/src/debug/kdepim-4.2.85/build/kaddressbook/features/resourceselection.moc:84
#10 0xb659bdc8 in QMetaObject::activate (sender=0xb173918, from_signal_index=96, to_signal_index=96, argv=0xbfa852f8) at kernel/qobject.cpp:3120
#11 0xb659d552 in QMetaObject::activate (sender=0xb173918, m=0xb62b9bf0, local_signal_index=1, argv=0xbfa852f8) at kernel/qobject.cpp:3194
#12 0xb60056e9 in QTreeWidget::itemClicked (this=0xb173918, _t1=0x8db9968, _t2=0) at .moc/release-shared/moc_qtreewidget.cpp:201
#13 0xb6009a45 in QTreeWidgetPrivate::_q_emitItemClicked (this=0xb3ae0b0, index=@0x8ead2b8) at itemviews/qtreewidget.cpp:2228
#14 0xb6012dd1 in QTreeWidget::qt_metacall (this=0xb173918, _c=QMetaObject::InvokeMetaMethod, _id=16, _a=0xbfa8542c) at .moc/release-shared/moc_qtreewidget.cpp:144
#15 0xb659bdc8 in QMetaObject::activate (sender=0xb173918, from_signal_index=32, to_signal_index=32, argv=0xbfa8542c) at kernel/qobject.cpp:3120
#16 0xb659d552 in QMetaObject::activate (sender=0xb173918, m=0xb62b8b44, local_signal_index=1, argv=0xbfa8542c) at kernel/qobject.cpp:3194
#17 0xb5f874a3 in QAbstractItemView::clicked (this=0xb173918, _t1=@0x8ead2b8) at .moc/release-shared/moc_qabstractitemview.cpp:321
#18 0xb5f94d95 in QAbstractItemView::mouseReleaseEvent (this=0xb173918, event=0xbfa85d48) at itemviews/qabstractitemview.cpp:1655
#19 0xb5fd74fc in QTreeView::mouseReleaseEvent (this=0xb173918, event=0xbfa85d48) at itemviews/qtreeview.cpp:1794
#20 0xb5a87323 in QWidget::event (this=0xb173918, event=0xbfa85d48) at kernel/qwidget.cpp:7521
#21 0xb5e45a63 in QFrame::event (this=0xb173918, e=0xbfa85d48) at widgets/qframe.cpp:559
#22 0xb5ee5c3f in QAbstractScrollArea::viewportEvent (this=0xb173918, e=0x0) at widgets/qabstractscrollarea.cpp:962
#23 0xb5f97a27 in QAbstractItemView::viewportEvent (this=0xb173918, event=0xbfa85d48) at itemviews/qabstractitemview.cpp:1471
#24 0xb5fd1cc6 in QTreeView::viewportEvent (this=0xb173918, event=0xbfa85d48) at itemviews/qtreeview.cpp:1264
#25 0xb5ee8245 in QAbstractScrollAreaFilter::eventFilter (this=0xb93a448, o=0xb116810, e=0xbfa85d48) at widgets/qabstractscrollarea_p.h:100
#26 0xb6584cea in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=0x8074450, receiver=0xb116810, event=0xbfa85d48) at kernel/qcoreapplication.cpp:726
#27 0xb5a3067a in QApplicationPrivate::notify_helper (this=0x8074450, receiver=0xb116810, e=0xbfa85d48) at kernel/qapplication.cpp:4053
#28 0xb5a39311 in QApplication::notify (this=0xbfa876c8, receiver=0xb116810, e=0xbfa85d48) at kernel/qapplication.cpp:3759
#29 0xb6b62b8d in KApplication::notify (this=0xbfa876c8, receiver=0xb116810, event=0xbfa85d48) at /usr/src/debug/kdelibs-4.2.85/kdeui/kernel/kapplication.cpp:307
#30 0xb6585adb in QCoreApplication::notifyInternal (this=0xbfa876c8, receiver=0xb116810, event=0xbfa85d48) at kernel/qcoreapplication.cpp:610
#31 0xb5a3837e in QApplicationPrivate::sendMouseEvent (receiver=0xb116810, event=0xbfa85d48, alienWidget=0xb116810, nativeWidget=0x81766d8, buttonDown=0xb62c5a40, lastMouseReceiver=@0xb62c5a44)
    at ../../src/corelib/kernel/qcoreapplication.h:216
#32 0xb5aa8506 in QETWidget::translateMouseEvent (this=0x81766d8, event=0xbfa873dc) at kernel/qapplication_x11.cpp:4446
#33 0xb5aa78dd in QApplication::x11ProcessEvent (this=0xbfa876c8, event=0xbfa873dc) at kernel/qapplication_x11.cpp:3442
#34 0xb5ad127a in x11EventSourceDispatch (s=0x8085a70, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#35 0xb4cf7e08 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#36 0xb4cfb37b in ?? () from /usr/lib/libglib-2.0.so.0
#37 0xb4cfb4f8 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#38 0xb65b1558 in QEventDispatcherGlib::processEvents (this=0x8074380, flags={i = -1079478888}) at kernel/qeventdispatcher_glib.cpp:324
#39 0xb5ad0975 in QGuiEventDispatcherGlib::processEvents (this=0x8074380, flags={i = -1079478840}) at kernel/qguieventdispatcher_glib.cpp:202
#40 0xb65840fa in QEventLoop::processEvents (this=0xbfa87640, flags={i = -1079478776}) at kernel/qeventloop.cpp:149
#41 0xb658453a in QEventLoop::exec (this=0xbfa87640, flags={i = -1079478712}) at kernel/qeventloop.cpp:200
#42 0xb65869e9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#43 0xb5a30517 in QApplication::exec () at kernel/qapplication.cpp:3526
#44 0x0804c04f in main (argc=1, argv=0xbfa879c4) at /usr/src/debug/kdepim-4.2.85/kontact/src/main.cpp:218
Comment 6 Dario Andres 2009-06-17 14:42:20 UTC
*** Bug 196818 has been marked as a duplicate of this bug. ***
Comment 7 Kevin Krammer 2009-06-23 14:45:27 UTC
I get this when I first deactivate the compatibilty resource and then attempt to deactivate one of its sub resources.

Just deactivating the top entry does not crash here.

Can one of you who gets the crash at this stage tell me how many sub resources their compat resource shows and whether they are activated/deactivated at the time the top level activation is changed?
Comment 8 Kevin Krammer 2009-06-23 20:30:25 UTC
SVN commit 985913 by krake:

Clearing all mappings certainly improves data consistency.

BUG: 193224


 M  +2 -0      subresourcemodel.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=985913