Clearing all mappings certainly improves data consistency.

BUG: 193224

svn path=/trunk/KDE/kdepim/akonadi/; revision=985913